--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 </head>
 
 <body>
-  <!-- Enlace de salto al contenido principal -->
-  <a href="#contenido" class="skip-link">Saltar al contenido</a>
 
-  <!-- Olas decorativas (se mantienen) -->
   <div class="wave-container" aria-hidden="true">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2.17 45.28" preserveAspectRatio="none">
       <path class="wave1" d="M.5 45.28C1.04 42.2.07 36 .5 29.13.9 22.26 1.06 15.4.38 10H0v35.28z" />
@@ -44,7 +41,7 @@
     </ul>
   </nav>
 
-  <main id="contenido" class="container grid">
+  <main id="contenido" class="container grid" role="main">
     <article id="sobre-mi" class="card about">
       <h2>Sobre mí</h2>
       <p>
