--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
   <nav aria-label="Navegación principal">
     <ul class="nav-list">
-      <li><a href="#sobre-mi">Sobre mí</a></li>
-      <li><a href="#formacion">Formación</a></li>
-      <li><a href="#habilidades">Habilidades</a></li>
-      <li><a href="#proyectos">Proyectos</a></li>
-      <li><a href="#contacto">Contacto</a></li>
+      <li><a href="#sobre-mi" aria-label="sobre mi">Sobre mí</a></li>
+      <li><a href="#formacion" aria-label="formacion">Formación</a></li>
+      <li><a href="#habilidades" aria-label="habilidades">Habilidades</a></li>
+      <li><a href="#proyectos" aria-label="proyectos">Proyectos</a></li>
+      <li><a href="#contacto" aria-label="contacto">Contacto</a></li>
     </ul>
   </nav>
 
@@ -88,7 +88,7 @@
         Desarrollo de un sistema web para gestionar clubes, campeonatos y tiempos de natación.
         Tecnologías: PHP, MySQL, HTML, CSS, JS.
       </p>
-      <ul class="tags">
+      <ul class="tags" aria-label="Tecnologías utilizadas">
         <li>PHP</li>
         <li>MySQL</li>
         <li>AJAX</li>
